--- a/Mechanic/Properties/launchSettings.json
+++ b/Mechanic/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     },
     "Mechanic": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "weatherforecast",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
